<resources>
    <string name="app_name">EletricCarApp</string>
    <string name="title">Electric Cars</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potencia</string>
    <string name="recarga">Recarga</string>
    <string name="preco_kwh">Preço Kwh</string>
    <string name="km_percorrido">Km percorrido</string>
    <string name="btn_calcular">Calcular</string>
    <string name="sem_conexao">Conexão com internet não disponível :(</string>
    <string name="response_error">Algo deu errado. Tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>

    <string-array name="array_cidades">
        <item>Araraquara</item>
        <item>Salvador</item>
        <item>João Pessoa</item>
        <item>São Paulo</item>
        <item>Fortaleza</item>
        <item>Rio de Janeiro</item>
    </string-array>
</resources>