<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="14dp"
        app:cardBackgroundColor="@color/lightgray"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp">

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_star_outline"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:src="@drawable/eletric_car"
                app:layout_constraintTop_toTopOf="@+id/cl_card_content"
                app:layout_constraintStart_toStartOf="@+id/cl_card_content"
                android:contentDescription="Imagem de um carro elétrico" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/cl_card_content"
                app:layout_constraintTop_toBottomOf="@id/iv_image">

                <TableRow>

                    <TextView
                        android:id="@+id/tv_preco"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/preco"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_image" />

                    <TextView
                        android:id="@+id/tv_preco_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="R$ 300.000,00" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_bateria"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bateria" />

                    <TextView
                        android:id="@+id/tv_bateria_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="300 kWh" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_potencia"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/potencia" />

                    <TextView
                        android:id="@+id/tv_potencia_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="300 CV" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_recarga"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/recarga" />

                    <TextView
                        android:id="@+id/tv_recarga_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="23min" />
                </TableRow>

            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>